--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,37 @@
 	color: #000000;
 }
 
+header {
+    height: 75px;
+    width: 100%;
+    background: white;
+    /* border-bottom: 1px solid lightgray; */
+}
+
 .navbar-brand-custom {
 	min-height: 30px;
 	font-size: 40px;
 	color: #000000;
 	font-family: 'Reem Kufi', sans-serif;
+}
+
+h1 {
+	font-family: 'Lato', sans-serif;
+}
+
+li {
+	font-family: 'Lato', sans-serif;
+}
+
+ul.nav li a, ul.nav li a:visited {
+	
+    color: #000000;
+}
+
+ul.nav li a:hover, ul.nav li a:active {
+    color: #000000;
+}
+
+ul.nav li.active a {
+    color: #000000;
 }
