--- a/console/css/style.css
+++ b/console/css/style.css
@@ -10,22 +10,29 @@ body {
   text-rendering: optimizeLegibility;
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 400;
-  background-image: url("https://s17.postimg.org/fr01hfe33/image.jpg");
+  background-color: white;
   background-size: cover;
   background-repeat: none;
 }
 
 .wrapper {
+  height: 100%;
+margin: 0px auto;
+overflow: hidden;
+  /*
   position: relative;
   left: 50%;
-  width: 1000px;
-  height: 800px;
+  height: 100%;
+  width: auto;
+  height: auto;
   -webkit-transform: translate(-50%, 0);
           transform: translate(-50%, 0);
+  */
 }
 
 .container {
   position: relative;
+  /*
   top: 50%;
   left: 50%;
   width: 80%;
@@ -33,12 +40,14 @@ body {
   background-color: #fff;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
+  */
+  background-color: #fff;
 }
 .container .left {
   float: left;
   width: 37.6%;
   height: 100%;
-  border: 1px solid #e6e6e6;
+  border: 1px solid #ffffff;
   background-color: #fff;
 }
 .container .left .top {
@@ -47,7 +56,7 @@ body {
   height: 96px;
   padding: 29px;
 }
-.container .left .top:after {
+/*.container .left .top:after {
   position: absolute;
   bottom: 0;
   left: 50%;
@@ -64,7 +73,7 @@ body {
   width: 188px;
   height: 42px;
   padding: 0 15px;
-  border: 1px solid #e6e6e6;
+  border: 1px solid #ffffff;
   background-color: #eceff1;
   border-radius: 21px;
   font-family: 'Source Sans Pro', sans-serif;
@@ -79,17 +88,19 @@ body {
   width: 42px;
   height: 42px;
   margin-left: 10px;
-  border: 1px solid #e6e6e6;
-  background-color: #00b0ff;
+  border: 1px solid #ffffff;
+  background-color: #c0a2ca;
   background-image: url("https://s11.postimg.org/dpuahewmn/name_type.png");
   background-repeat: no-repeat;
   background-position: top 12px left 14px;
   border-radius: 50%;
-}
+}*/
 .container .left .people {
   margin-left: -1px;
-  border-right: 1px solid #e6e6e6;
-  border-left: 1px solid #e6e6e6;
+  border-right: 1px solid #bab6b6;
+  border-left: 1px solid #ffffff;
+  border-top: 1px solid #bab6b6;
+
   width: calc(100% + 2px);
 }
 .container .left .people .person {
@@ -121,7 +132,7 @@ body {
 .container .left .people .person .name {
   font-size: 14px;
   line-height: 22px;
-  color: #1a1a1a;
+  color: #5b5c5e;
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 600;
 }
@@ -142,18 +153,21 @@ body {
   white-space: nowrap;
   text-overflow: ellipsis;
   color: #999;
+  padding-left: 1cm;
+
 }
 .container .left .people .person.active, .container .left .people .person:hover {
   margin-top: -1px;
   margin-left: -1px;
   padding-top: 13px;
   border: 0;
-  background-color: #00b0ff;
+  background-color:#F1F1F1;
+  border-right: 1px solid #bab6b6;
   width: calc(100% + 2px);
   padding-left: calc(10% + 1px);
 }
 .container .left .people .person.active span, .container .left .people .person:hover span {
-  color: #fff;
+  color: #000;
   background: transparent;
 }
 .container .left .people .person.active:after, .container .left .people .person:hover:after {
@@ -164,19 +178,21 @@ body {
   float: left;
   width: 62.4%;
   height: 100%;
+  min-height: 100%
 }
 .container .right .top {
   width: 100%;
-  height: 47px;
+  height: 100%;
   padding: 15px 29px;
   background-color: #eceff1;
+  border-top: 1px solid #bab6b6;
 }
 .container .right .top span {
   font-size: 15px;
   color: #999;
 }
 .container .right .top span .name {
-  color: #1a1a1a;
+  color: #5b5c5e;
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 600;
 }
@@ -187,7 +203,7 @@ body {
   padding: 0 35px 92px;
   border-width: 1px 1px 1px 0;
   border-style: solid;
-  border-color: #e6e6e6;
+  border-color: #ffffff;
   height: calc(100% - 48px);
   -webkit-box-pack: end;
       -ms-flex-pack: end;
@@ -253,7 +269,7 @@ body {
   left: 30px;
   height: 42px;
   padding-left: 8px;
-  border: 1px solid #e6e6e6;
+  border: 1px solid #ffffff;
   background-color: #eceff1;
   width: calc(100% - 58px);
   border-radius: 5px;
@@ -271,7 +287,8 @@ body {
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 400;
 }
-.container .right .write .write-link.attach:before {
+
+/*.container .right .write .write-link.attach:before {
   display: inline-block;
   float: left;
   width: 20px;
@@ -280,10 +297,10 @@ body {
   background-image: url("https://s1.postimg.org/s5gfy283f/attachemnt.png");
   background-repeat: no-repeat;
   background-position: center;
-}
+} 
 .container .right .write .write-link.smiley:before {
   display: inline-block;
-  float: left;
+  float: right;
   width: 20px;
   height: 42px;
   content: '';
@@ -291,9 +308,10 @@ body {
   background-repeat: no-repeat;
   background-position: center;
 }
+*/
 .container .right .write .write-link.send:before {
   display: inline-block;
-  float: left;
+  float: right;
   width: 20px;
   height: 42px;
   margin-left: 11px;
@@ -325,7 +343,7 @@ body {
 .container .right .bubble.you {
   float: left;
   color: #fff;
-  background-color: #00b0ff;
+  background-color: #C0A2CA;
   -ms-flex-item-align: start;
       align-self: flex-start;
   -webkit-animation-name: slideFromLeft;
@@ -333,12 +351,12 @@ body {
 }
 .container .right .bubble.you:before {
   left: -3px;
-  background-color: #00b0ff;
+  background-color: #C0A2CA;
 }
 .container .right .bubble.me {
   float: right;
   color: #1a1a1a;
-  background-color: #eceff1;
+  background-color:#EAEAEA;
   -ms-flex-item-align: end;
       align-self: flex-end;
   -webkit-animation-name: slideFromRight;
@@ -346,7 +364,7 @@ body {
 }
 .container .right .bubble.me:before {
   right: -3px;
-  background-color: #eceff1;
+  background-color: #EAEAEA;
 }
 .container .right .conversation-start {
   position: relative;
@@ -414,4 +432,13 @@ body {
     margin-right: 0;
     opacity: 1;
   }
+}
+
+p {
+    color: #5b5c5e;
+    padding-left: 1cm;
+}
+
+.logo{
+  padding: 2em;
 }
