--- a/console/css/style.css
+++ b/console/css/style.css
@@ -446,7 +446,7 @@ p {
 .logo{
   padding-top: 1em;
   padding-left: 15px;
-  height: 75px;
+
 }
 
 header {
@@ -459,5 +459,8 @@ header {
   position: absolute;
   padding: 2.5em;
   top: 0;
-  height: 25px;
+}
+
+img {
+  height: 50px;
 }
